--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <p>Hello guys wellcome to my channle.</p>
 </body>
 <script src="script.js"></script>
 </html>
